@@ -374,4 +374,34 @@ od(0, 18446744073709551629); Mod(7, 18446744073709551629), Mod(8, 1844674407
 0
 0
 0
-Total time spent: 56
+
+[1 0 0]
+
+[0 0 1]
+
+
+[1 0 0]
+
+[0 0 1]
+
+
+[1 0 0]
+
+[0 0 1]
+
+
+[1 0]
+
+[1 0]
+
+
+[1 2]
+
+[0 1]
+
+
+[1 2]
+
+[3 4]
+
+Total time spent: 60
